Actualizar palabras de encabezado y footer de ingles a español, eliminar div de miembros enlaces rotos

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mechanical a Industrial category Flat bootstrap Responsive  Website Template | About :: w3layouts</title>
+<title>Meca hidraulica serranos sas</title>
 <!--css-->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-nav">
 	<div class="container">
 		<div class="logo">
-			<a href="index.html"><h1>Mechanical</h1></a>
+			<a href="index.html"><h1>MEHIS S.A.S</h1></a>
 		</div>
 		<div class="navigation">
 			<nav class="navbar navbar-default">
@@ -61,12 +61,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					  <ul class="nav navbar-nav">
-						<li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-						<li class="active"><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
+						<li><a href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
+						<li class="active"><a href="about.html">Nosotros</a></li>
+						<li><a href="services.html">Servicios</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="gallery.html">Galeria</a></li>
+						<li><a href="contact.html">Contactenos</a></li>
 					  </ul>
 			  <div class="clearfix"> </div>
 			</div><!-- /.navbar-collapse -->
