--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mechanical a Industrial category Flat bootstrap Responsive  Website Template | Home :: w3layouts</title>
+<title>Meca hidraulica Serranos SAS</title>
 <!--css-->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-nav">
 	<div class="container">
 		<div class="logo">
-			<a href="index.html"><h1>Mechanical</h1></a>
+			<a href="index.html"><h1>MEHIS S.A.S</h1></a>
 		</div>
 		<div class="navigation">
 			<nav class="navbar navbar-default">
@@ -61,12 +61,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					  <ul class="nav navbar-nav">
-						<li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
+						<li class="active"><a href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
+						<li><a href="about.html">Nosotros</a></li>
+						<li><a href="services.html">Servicios</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="gallery.html">Galeria</a></li>
+						<li><a href="contact.html">Contactenos</a></li>
 					  </ul>
 			  <div class="clearfix"> </div>
 			</div><!-- /.navbar-collapse -->
@@ -299,26 +299,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <li><a href="contact.html">Contact</a></li>
 					 </ul>
 				 </div>
-				 <div class="col-md-3 ftr_navi ftr">
-					 <h3>Members</h3>
-					 <ul>
-						 <li><a href="#">Customer Support</a></li>
-						 <li><a href="#">Platinum Support</a></li>
-						 <li><a href="#">Gold Support</a></li>						
-						 <li><a href="#">Standard Support</a></li>
-						 <li><a href="#">Training</a></li>
-					 </ul>
-				 </div>
 				 <div class="col-md-3 get_in_touch ftr">
-					  <h3>Get In Touch</h3>
-					  <p>Ola-ola street jump,</p>
-					  <p>260-14 City, Country</p>
-					  <p>+62 000-0000-00</p>
+					  <h3>Ponte en contacto</h3>
+					  <p>La Estrella - Antioquia</p>
+					  <p>Cr 50 100B sur 221</p>
+					  <p>+57 3105914788</p>
 					  <a href="mailto:mail@mlampah.com">www.example.com</a>
 				 </div>
 				 <div class="col-md-3 ftr-logo">
-					 <a href="index.html"><h3>Mechanical</h3></a>
-					 <p>© 2015 Mechanical. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+					 <a href="index.html"><h3>MEHIS S.A.S</h3></a>
+					 <p>© 2025 Meca hidraulica serranos sas. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 				 </div>
 				<div class="clearfix"> </div>
 			 </div>
