--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--inner-page-about-->
 <div class="contact">
 	<div class="container">
-		<h3>Contact</h3>
+		<h3>Contactenos</h3>
 			<div class="contact-main">
 				<div class="contact-top">
 					<div class="col-md-6 contact-top-left">
@@ -113,12 +113,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-6 contact-top-right">
 						<div class="contact-textarea">
 							<form>
-								<input type="text" value="First Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}"/>
-								<input type="text" value="Second Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Second Name';}"/>
-								<input type="text" value="Email Id" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email Id';}"/>
-								<textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Message..</textarea>
-								<input type="submit" value="SUBMIT" >
-								<input type="reset" value="CLEAR" >
+								<input type="text" value="Primer nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}"/>
+								<input type="text" value="Segundo nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Second Name';}"/>
+								<input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email Id';}"/>
+								<textarea value="Mensaje:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mensaje:';}">Mensaje..</textarea>
+								<input type="submit" value="ENVIAR" >
+								<input type="reset" value="BORRAR" >
 							</form>
 						</div>
 					</div>
