--- a/index.html
+++ b/index.html
@@ -290,17 +290,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  <div class="footer">
 			 <div class="container">				 	
 				 <div class="col-md-3 ftr_navi ftr">
-					 <h3>Navigation</h3>
+					 <h3>NAVEGACION</h3>
 					 <ul>
-						 <li><a href="index.html">Home</a></li>
-						 <li><a href="about.html">About</a></li>
-						 <li><a href="gallery.html">Gallery</a></li>						
+						 <li><a href="index.html">Inicio</a></li>
+						 <li><a href="about.html">Nosotros</a></li>
+						 <li><a href="gallery.html">Galeria</a></li>						
 						 <li><a href="blog.html">Blog</a></li>
-						 <li><a href="contact.html">Contact</a></li>
+						 <li><a href="contact.html">Contactenos</a></li>
 					 </ul>
 				 </div>
 				 <div class="col-md-3 get_in_touch ftr">
-					  <h3>Ponte en contacto</h3>
+					  <h3>PONTE EN CONTACTO</h3>
 					  <p>La Estrella - Antioquia</p>
 					  <p>Cr 50 100B sur 221</p>
 					  <p>+57 3105914788</p>
