--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="contact-main">
 				<div class="contact-top">
 					<div class="col-md-6 contact-top-left">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d92622.7729403269!2d-112.03370705!3d43.49270405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1434188003159" frameborder="0" style="border:0"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.0883787373223!2d-75.63735168774534!3d6.118805193842293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4686b1ad38b017%3A0xd82b2aaa89e6b1e8!2sCra.%2050%20%23100%20Sur55%2C%20La%20Estrella%2C%20Antioquia%2C%20Colombia!5e0!3m2!1ses-419!2sus!4v1765731742793!5m2!1ses-419!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>
 					<div class="col-md-6 contact-top-right">
 						<div class="contact-textarea">
