Cambiar colores acorde a la empresa real

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
 						<li><a href="about.html">Nosotros</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="blog.html">Blog</a></li>
 						<li><a href="gallery.html">Galeria</a></li>
 						<li class="active"><a href="contact.html">Contactenos</a></li>
 					  </ul>
@@ -108,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="contact-main">
 				<div class="contact-top">
 					<div class="col-md-6 contact-top-left">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.0883787373223!2d-75.63735168774534!3d6.118805193842293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4686b1ad38b017%3A0xd82b2aaa89e6b1e8!2sCra.%2050%20%23100%20Sur55%2C%20La%20Estrella%2C%20Antioquia%2C%20Colombia!5e0!3m2!1ses-419!2sus!4v1765731742793!5m2!1ses-419!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.0987586269525!2d-75.63799058774536!3d6.117406593843602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46872cc29cbaf9%3A0x1648a16cf59886f6!2sMeca%20hidraulica%20serranos%20sas%20Mehis%20SAS!5e0!3m2!1ses-419!2sus!4v1765732245566!5m2!1ses-419!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>
 					<div class="col-md-6 contact-top-right">
 						<div class="contact-textarea">
