Eliminar funcionalidad blog

--- a/services.html
+++ b/services.html
@@ -554,7 +554,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <li><a href="index.html">Home</a></li>
 						 <li><a href="about.html">About</a></li>
 						 <li><a href="gallery.html">Gallery</a></li>						
-						 <li><a href="blog.html">Blog</a></li>
 						 <li><a href="contact.html">Contact</a></li>
 					 </ul>
 				 </div>
@@ -577,7 +576,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 </div>
 				 <div class="col-md-3 ftr-logo">
 					 <a href="index.html"><h3>Mechanical</h3></a>
-					 <p>© 2015 Mechanical. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+					 <p>© 2025 Meca hidraulica serranos sas. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 				 </div>
 				<div class="clearfix"> </div>
 			 </div>
