--- a/about.html
+++ b/about.html
@@ -172,35 +172,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  <div class="footer">
 			 <div class="container">				 	
 				 <div class="col-md-3 ftr_navi ftr">
-					 <h3>NAVIGATION</h3>
+					 <h3>NAVEGACION</h3>
 					 <ul>
-						 <li><a href="index.html">Home</a></li>
-						 <li><a href="about.html">About</a></li>
-						 <li><a href="gallery.html">Gallery</a></li>						
-						 <li><a href="blog.html">Blog</a></li>
-						 <li><a href="contact.html">Contact</a></li>
-					 </ul>
-				 </div>
-				 <div class="col-md-3 ftr_navi ftr">
-					 <h3>MEMBERS</h3>
-					 <ul>
-						 <li><a href="#">Customer Support</a></li>
-						 <li><a href="#">Platinum Support</a></li>
-						 <li><a href="#">Gold Support</a></li>						
-						 <li><a href="#">Standard Support</a></li>
-						 <li><a href="#">Training</a></li>
+						 <li><a href="index.html">Inicio</a></li>
+						 <li><a href="about.html">Nosotros</a></li>
+						 <li><a href="gallery.html">Galeria</a></li>						
+						 <li><a href="contact.html">Contactenos</a></li>
 					 </ul>
 				 </div>
 				 <div class="col-md-3 get_in_touch ftr">
-					  <h3>GET IN TOUCH</h3>
-					  <p>Ola-ola street jump,</p>
-					  <p>260-14 City, Country</p>
-					  <p>+62 000-0000-00</p>
+					  <h3>PONTE EN CONTACTO</h3>
+					  <p>La Estrella - Antioquia</p>
+					  <p>Cr 50 100B sur 221</p>
+					  <p>+57 3105914788</p>
 					  <a href="mailto:mail@mlampah.com">www.example.com</a>
 				 </div>
 				 <div class="col-md-3 ftr-logo">
-					 <a href="index.html"><h3>Mechanical</h3></a>
-					 <p>© 2015 Mechanical. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+					 <a href="index.html"><h3>MEHIS S.A.S</h3></a>
+					 <p>© 2025 Meca hidraulica serranos sas. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 				 </div>
 				<div class="clearfix"> </div>
 			 </div>
