--- a/gallery.html
+++ b/gallery.html
@@ -182,7 +182,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						 <li><a href="index.html">Inicio</a></li>
 						 <li><a href="about.html">Nosotros</a></li>
 						 <li><a href="gallery.html">Galeria</a></li>						
-						 <li><a href="blog.html">Blog</a></li>
 						 <li><a href="contact.html">Contactenos</a></li>
 					 </ul>
 				 </div>
@@ -195,7 +194,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 </div>
 				 <div class="col-md-3 ftr-logo">
 					 <a href="index.html"><h3>MEHIS S.A.S</h3></a>
-					 <p>© 2015 Mechanical. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+					 <p>© 2025 Meca hidraulica serranos sas. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 				 </div>
 				<div class="clearfix"> </div>
 			 </div>
