--- a/gallery.html
+++ b/gallery.html
@@ -114,58 +114,62 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--/light-box-files -->
 <div class="gallery">
 	<div class="container">
-		<h3>Gallery</h3>
+		<h3>Galeria</h3>
 			<div class="moments-bottom">
 				<div class="moments-1">
 					<div class="col-md-4 moments-left">
-						<a href="images/10.jpg">
-							<img src="images/10.jpg" alt="name" />
+						<a href="images/10.webp">
+							<img src="images/10.webp" alt="name" />
 						</a>
 					</div>
 					<div class="col-md-4 moments-left">
-						<a href="images/14.jpg">
-							<img src="images/14.jpg" alt="name" />
+						<a href="images/14.webp">
+							<img src="images/14.webp" alt="name" />
 						</a>
 					</div>
 					<div class="col-md-4 moments-left">
-						<a href="images/15.jpg">
-							<img src="images/15.jpg" alt="name" />
+						<a href="images/15.webp">
+							<img src="images/15.webp" alt="name" />
 						</a>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="moments-1">
 					<div class="col-md-4 moments-left">
-						<a href="images/16.jpg">
-							<img src="images/16.jpg" alt="name" />
+						<a href="images/1.mp4">
+							<video controls autoplay muted loop>
+								<source src="1.mp4" type="video/mp4">
+								Tu navegador no soporta el elemento
+							</video>
 						</a>
 					</div>
 					<div class="col-md-4 moments-left">
-						<a href="images/17.jpg">
-							<img src="images/17.jpg" alt="name" />
+						<a href="images/2.mp4">
+							<video controls autoplay muted loop>
+								<source src="2.mp4" type="video/mp4">
+								Tu navegador no soporta el elemento
+							</video>
 						</a>
 					</div>
 					<div class="col-md-4 moments-left">
-						<a href="images/18.jpg">
-							<img src="images/18.jpg" alt="name" />
+						<a href="images/3.mp4">
+							<video controls autoplay muted loop>
+								<source src="3.mp4" type="video/mp4">
+								Tu navegador no soporta el elemento
+							</video>
 						</a>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 					<div class="moments-1">
 					<div class="col-md-4 moments-left">
-						<a href="images/19.jpg">
-							<img src="images/19.jpg" alt="name" />
+						<a href="images/19.webp">
+							<img src="images/19.webp" alt="name" />
 						</a>
 					</div>
 					<div class="col-md-4 moments-left">
-						<a href="images/20.jpg">
-							<img src="images/20.jpg" alt="name" />
-						</a>
-					</div>
-					<div class="col-md-4 moments-left">
-						<a href="images/22.jpg">
-							<img src="images/22.jpg" alt="name" />
+						<a href="images/22.webp">
+							<img src="images/22.webp" alt="name" />
 						</a>
 					</div>
 					<div class="clearfix"> </div>
