Finalizar seccion galeria

--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
 						<li><a href="about.html">Nosotros</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="blog.html">Blog</a></li>
 						<li class="active"><a href="gallery.html">Galeria</a></li>
 						<li><a href="contact.html">Contactenos</a></li>
 					  </ul>
@@ -98,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>		
 <div class="banner-bottom-strip">
 	<div class="container">
-		<p>Engineering applied to the planning, design, and control of industrial operations.</p>
+		<p>Ingenieria integral para un ciclo sostenible</p>
 	</div>
 </div>	
 <!--inner-page-about-->
@@ -190,10 +189,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 </ul>
 				 </div>
 				 <div class="col-md-3 get_in_touch ftr">
-					  <h3>GET IN TOUCH</h3>
-					  <p>Ola-ola street jump,</p>
-					  <p>260-14 City, Country</p>
-					  <p>+62 000-0000-00</p>
+					  <h3>PONTE EN CONTACTO</h3>
+					  <p>La Estrella - Antioquia</p>
+					  <p>Cr 50 100B sur 221</p>
+					  <p>+57 3105914788</p>
 					  <a href="mailto:mail@mlampah.com">www.example.com</a>
 				 </div>
 				 <div class="col-md-3 ftr-logo">
