Eliminar div Team work, apuntaba a blog y no se requiere

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>		
 <div class="banner-bottom-strip">
 	<div class="container">
-		<p>Engineering applied to the planning, design, and control of industrial operations.</p>
+		<p>Ingenieria integral para un ciclo sostenible</p>
 	</div>
 </div>	
 <!--inner-page-about-->
