--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>		
 <div class="banner-bottom-strip">
 	<div class="container">
-		<p>Engineering applied to the planning, design, and control of industrial operations.</p>
+		<p>Ingenieria integral para un ciclo sostenible</p>
 	</div>
 </div>	
 <div class="welcome">
@@ -249,42 +249,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 	  </div>
 	</div>
-</div>
-<div class="testimonials">
-			<div class="testimonials-quote">
-					<div class="col-md-6 testimonials-text">
-						<h5>The silverware needed polishing and the furniture could use a good dusting.</h5>
-			</div>
-			<div class="clearfix"> </div>
-        </div>
-        </div>
-	 <div class="team-work">
-	  <div class="container">
-		 <h3 class="team">Team Work</h3>
-		 <div class="team-grids">
-			 <div class="col-md-3 team-grid">
-				 <img src="images/abt1.jpg" alt=""/>
-				 <h3><a href="single.html">Sed vestibulum dui</a></h3>
-				 <p>Nulla elementum vulputate quam, quis efficitur quam tempus non. Cras a dignissim purus. Ut scelerisque quis eros elementum sollicitudin.</p>
-			 </div>
-			 <div class="col-md-3 team-grid">
-				 <img src="images/abt2.jpg" alt=""/>
-				 <h3><a href="single.html">Fusce fringilla in mattis</a></h3>
-				 <p>Nulla elementum vulputate quam, quis efficitur quam tempus non. Cras a dignissim purus. Ut scelerisque quis eros elementum sollicitudin.</p>
-			 </div>
-			 <div class="col-md-3 team-grid">
-				 <img src="images/abt3.jpg" alt=""/>
-				 <h3><a href="single.html">Donec porta in fringilla</a></h3>
-				 <p>Nulla elementum vulputate quam, quis efficitur quam tempus non. Cras a dignissim purus. Ut scelerisque quis eros elementum sollicitudin.</p>
-			 </div>
-			 <div class="col-md-3 team-grid">
-				 <img src="images/abt4.jpg" alt=""/>
-				 <h3><a href="single.html">Sed non sem facilisis</a></h3>
-				 <p>Nulla elementum vulputate quam, quis efficitur quam tempus non. Cras a dignissim purus. Ut scelerisque quis eros elementum sollicitudin.</p>
-			 </div>
-			 <div class="clearfix"> </div>
-		 </div>
-	 </div>
 </div>
  <div class="footer">
 			 <div class="container">				 	
