Ajustar seccion Nosotros y todo su contenido

--- a/about.html
+++ b/about.html
@@ -103,16 +103,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--inner-page-about-->
 <div class="abouts">
 		<div class="container">
-			<h3>About Us</h3>
+			<h3>Experiencia que construye, innovacion que transforma</h3>
 			<div class="about-main">
 				<div class="about-top">
 					<div class="col-md-5 about-top-left">
 						<img src="images/a1.jpg" class="img-responsive" alt=""/>
 					</div>
 					<div class="col-md-7 about-top-right">
-						<h4>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</h4>
-						<p>Fusce feugiat malesuada odio orbi nunc odio gravida at cursus nec luctus a lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna onec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo.Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend.</p>
-						<p>Bulum iaculis lacinia est. Proin dictum elemntum velit. Fusce euismod cons equat ante. Lorem ipsum dmeconsectetuer adipiscing elit. ellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla vene natis. In pede mi aliquet sit amet euismod in auctor ut ligula. </p>
+						<h4>En Meca Hidraulica Serranos S.A.S - MEHIS S.A.S...</h4>
+						<p>Somos mas que fabricantes de maquinaria; somos una familia dedicada a impulsar la industrai y proteger el medio ambiente. Aunque nos constituimos legalmente en el año 2021, nuestra esencia y conocimientos se han forjado a lo largo de décadas.</p>
+						<p> Nuestra historia nace de la trayectoria de nuestro fundador, Raúl Serrano Morales, quien ha dedicado toda su vida al sector industrial y de reciclaje, acumulando un "know-how" técnico invaluable. Esta experiencia se fusiona hoy con la visión estratégica de nuestro Gerente General, Raúl Eduardo Serrano Rueda, creando una sinergia perfecta entre la sabiduría de la tradición y la energía de la innovación.</p>
+						<p> Entendemos la industria desde adentro. Por eso, no solo entregamos una máquina o un repuesto; entregamos una solución integral que cierra el círculo: desde la fabricación y el mantenimiento, hasta el suministro de partes y la logística de transporte.</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -121,24 +122,42 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <!------->
 	 <div class="who_are">
 	     <div class="container">			
-				 <h5>WHO WE ARE</h5>
-				 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-				 <p>Morbi sapien turpis, aliquet quis elementum ut, molestie nec turpis. Duis ultrices fermentum enim ac facilisis. Phasellus laoreet rhoncus diam ut auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris ut malesuada mi. Aliquam nec est arcu. Quisque dui odio, interdum vel euismod vel, sollicitudin quis augue. Integer pharetra, neque in commodo consectetur, tortor enim venenatis nibh, sed dictum purus tortor non nisl.
-				 Vestibulum in bibendum lacus. Suspendisse lobortis pharetra eros. Nam sagittis nulla sed lorem gravida laoreet. Sed id lacus erat. Sed ullamcorper, libero quis ultrices blandit, arcu lorem vehicula urna, ut ultrices nunc tortor a ex. Curabitur interdum sed leo quis condimentum. Nam congue erat elit, eu malesuada augue rutrum non. Donec malesuada ultrices commodo. Vestibulum commodo congue ipsum ac suscipit.</p>
-			 
-				 <div class="about-list">
-					 <ul>
-						 <li><a href="">Always free from repetition</a></li>
-						 <li><a href="">Vestibulum rhoncus nibh quis dui fermentum iaculis.</a></li>
-						 <li><a href="">The standard chunk of Lorem Ipsum</a></li>
-						 <li><a href="">In consequat dolor in lorem egestas ultrices.</a></li>
-						 <li><a href="">Aliquam sollicitudin eros id luctus consequat.</a></li>
-						 <li class="none"><a href="">Always free from repetition</a></li>
-					 </ul>		 
-				 </div>			 
+				 <h5>Nuestra Misión</h5>
+				 <p>Ser el motor de eficiencia para nuestros clientes. Nos dedicamos a satisfacer sus necesidades industriales promoviendo el uso correcto y razonable de los residuos. Trabajamos para aumentar su capacidad de producción y disminuir los costos ocultos operativos, garantizando maquinaria confiable y servicios que respaldan la economía circular.</p>
+				 <h4>Detectamos y eliminamos las fallas que silenciosamente consumen tu presupuesto.</h4>
          </div>
 	 </div>
 	 <!------->
+	 <div class="who_are">
+	     <div class="container">			
+				 <h5>Nuestra Visión</h5>
+				 <p>Posicionarnos en el mercado nacional como el aliado estratégico indispensable para la industria del reciclaje y la manufactura. Aspiramos a ser reconocidos no solo por la calidad de nuestras prensas y servicios, sino por nuestra capacidad para transformar los procesos de nuestros clientes hacia un modelo más rentables y sostenibles.</p>
+         </div>
+	 </div>
+	 <div class="who_are">
+	     <div class="container">			
+				 <h5>¿Por qué elegirnos?</h5>
+				 <h4>Nuestra propuesta de valor es integral. Cubrimos todo el ciclo que tu empresa necesita:</h4>
+				 <ul>
+					<li>Fabricación:<p>Especialistas en maquinaria industrial tales como prensas para compactar reciclaje u otros materiales (pet, carton, cobre entre otros).</p></li>
+					<li>Servicio Técnico:<p>Mantenimiento y reparación experto.</p></li>
+					<li>Suministros:<p>Repuestos eléctricos e hidráulicos de alta calidad.</p></li>
+					<li>Logística:<p>Tercerización de transporte y acarreo.</p></li>
+				 </ul>
+		 </div>
+	 </div>
+	 <div class="who_are">
+	     <div class="container">			
+				 <h5>Nuestros aliados/clientes</h5>
+				 <p>La confianza se construye con hechos. Gracias a nuestro compromiso y calidad, contamos con la confianza de empresas referentes en el sector como:</p>
+				 <ul>
+					<li>Fractal Estrategias Sostenibles</li>
+					<li>Fadiescol Reciclajes S.A.S.</li>
+					<li>3S Ingeniería Especializada S.A.S.</li>
+					<li>Scrapmetal</li>
+				 </ul>
+         </div>
+	 </div>
 </div>
 </div>
 <!--/inner-page-about-->
