--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 features-right">
 				<h4>Best Industrial Product</h4>
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-					<a href="about.thml" class="hvr-bounce-to-bottom">Read More</a>
+					<a href="about.html" class="hvr-bounce-to-bottom">Read More</a>
 			</div>
 			<div class="clearfix"> </div>
 	  </div>
@@ -239,7 +239,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 features-right1">
 				<h4>Best Industrial Product</h4>
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-					<a href="about.thml" class="hvr-bounce-to-bottom">Read More</a>
+					<a href="about.html" class="hvr-bounce-to-bottom">Read More</a>
 			</div>
 						<div class="col-md-6 features-left1">
 							<a href="single.html"class="mask">
