Ajustar seccion servicios y el index

--- a/index.html
+++ b/index.html
@@ -138,17 +138,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>	
 <div class="welcome">
 	<div class="container">
-		<h3>Industrial Technologies</h3>
-		<h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</h5>
+		<h3>Productos y servicios</h3>
+		<h5>Ingeniería Robusta y Servicios 360°.</h5>
 <div id="products" class="products">
 				<div class="col-md-4 product-grid">
 						<a href="images/a1.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
 							<img src="images/a1.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus</p>
+							<h4> Asesorias y capacitaciones</h4>
+							<p>Uso adecuado de los equipos, manejo de residuos, mejora de procesos y muchas mas.</p>
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">	
@@ -156,9 +155,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/a2.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus</p>
+							<h4> Diseño y Fabricación de Maquinaria</h4>
+							<p> Compactadoras horizontales, verticlaes, molinos entre muchos mas equipos </p>							
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">
@@ -166,9 +164,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/a3.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus</p>
+							<h4> Mantenimiento y Mecánica Industrial</h4>
+							<p> Elaboracion y ejecucion de plan de mantenimientos preventivos y correctivos</p>
 						</div>
 					</div>
 				<div class="col-md-4 product-grid">
@@ -176,9 +173,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/a4.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus</p>
+							<h4> Automatización y Sistemas Eléctricos</h4>
+							<p>Tableros, automatizaciòn por medio de sensores o programacion de logica</p>
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">	
@@ -186,9 +182,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/a5.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus</p>
+							<h4> Venta de Suministros y Repuestos</h4>
+							<p>Unidades hidraulicas completas, motores, bombas, acoples, otros</p>
 						</div>
 					</div>
 				<div class="col-md-4 product-grid">
@@ -196,9 +191,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/a6.jpg" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
-							<h4> voluptatibus maiores alias perferendis</h4>
-							<p> Itaque earum rerum hic tenetur a sapiente delectus, 
-								ut aut reiciendis voluptatibus </p>
+							<h4> Logística y Transporte (Acarreo)</h4>
+							<p> No te compliques por el transporte, tenemos aliados que lo realizaran por ti </p>
 						</div>
 					</div>
 					<link rel="stylesheet" href="css/swipebox.css">
@@ -214,8 +208,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <div class="features">
 	<div class="container">
-		<h3>Best Industrial Products</h3>
-		<h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</h5>
+		<h3>Somos</h3>
+		<h5>Todo lo que tu industria necesita, en un solo lugar.</h5>
 		<div class="features-info">
 			<div class="col-md-6 features-left">
 				<a href="single.html"class="mask">
@@ -223,9 +217,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</a>
 			</div>
 			<div class="col-md-6 features-right">
-				<h4>Best Industrial Product</h4>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-					<a href="about.html" class="hvr-bounce-to-bottom">Read More</a>
+				<h4>Experiencia que construye, innovacion que transforma</h4>
+				<p>En Meca Hidraulica Serranos S.A.S - MEHIS S.A.S... Somos mas que fabricantes de maquinaria; somos una familia dedicada a impulsar la industrai y proteger el medio ambiente. Aunque nos constituimos legalmente en el año 2021, nuestra esencia y conocimientos se han forjado a lo largo de décadas.</p>
+					<a href="about.html" class="hvr-bounce-to-bottom">Leer mas</a>
 			</div>
 			<div class="clearfix"> </div>
 	  </div>
@@ -233,13 +227,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <div class="features1">
 	<div class="container">
-		<h3>Technological Development In Industry</h3>
+		<h3>Calidad Certificada: Los Equipos Más Robustos y Confiables del Mercado.</h3>
 		<h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</h5>
 		<div class="features-info1">
 			<div class="col-md-6 features-right1">
-				<h4>Best Industrial Product</h4>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-					<a href="about.html" class="hvr-bounce-to-bottom">Read More</a>
+				<h4>Potencie su Rentabilidad y Asegure su Operación</h4>
+				<p>No permita que los costos ocultos y las paradas inesperadas frenen el crecimiento de su empresa. Es momento de blindar su operación con maquinaria robusta y un servicio técnico que responde cuando más lo necesita. Contáctenos hoy mismo para recibir una asesoría personalizada y descubra cómo podemos optimizar su presupuesto y potenciar su producción.</p>
+					<a href="contact.html" class="hvr-bounce-to-bottom">SOLICITAR COTIZACION</a>
 			</div>
 						<div class="col-md-6 features-left1">
 							<a href="single.html"class="mask">
