Eliminar y cargar nuevas imagenes optimizadas en formatowebp, ajustes finales

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="about-main">
 				<div class="about-top">
 					<div class="col-md-5 about-top-left">
-						<img src="images/a1.jpg" class="img-responsive" alt=""/>
+						<img src="images/f1.webp" class="img-responsive" alt=""/>
 					</div>
 					<div class="col-md-7 about-top-right">
 						<h4>En Meca Hidraulica Serranos S.A.S - MEHIS S.A.S...</h4>
