--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<ul class="rslides" id="slider3">
 									<li>
 										<div class="banner2">
-											<h2>Origin of industrial</h2>
-											<p>The uniform customer experiences they provide are triumphs of industrial engineering and efficiency systems management.</p>
+											<h2>El futuro de la industria</h2>
+											<p>Entendemos el cambio es por eso que nos actualizamos constantemente buscando llegar a ese futuro anhelado</p>
 										</div>
 									</li>
 									<li>
 										<div class="banner1">
-											<h2>Industrial Engineer</h2>
-											<p>engineering applied to the planning, design, and control of industrial operations.of a industrial engineering today</p>
+											<h2>Reciclar</h2>
+											<p>Una palabra poderosa para darle una segunda oportunidad a las materias primas</p>
 										</div>
 									</li>
 									<li>
 										<div class="banner-slide">
-											<h2>Industrial Operated</h2>
-											<p>This small mark has two primary uses: to signify possession or omitted letters.Learn the correct uses of these commonly</p>
+											<h2>Trabajo colaborativo</h2>
+											<p>Equipo altamente calificado a su total disposicion</p>
 										</div>
 									</li>
 						</ul>
@@ -142,8 +142,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h5>Ingeniería Robusta y Servicios 360°.</h5>
 <div id="products" class="products">
 				<div class="col-md-4 product-grid">
-						<a href="images/a1.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a1.jpg" alt=" " class="img-responsive" />
+						<a href="images/a1.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a1.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Asesorias y capacitaciones</h4>
@@ -151,8 +151,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">	
-						<a href="images/a2.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a2.jpg" alt=" " class="img-responsive" />
+						<a href="images/a2.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a2.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Diseño y Fabricación de Maquinaria</h4>
@@ -160,8 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">
-						<a href="images/a3.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a3.jpg" alt=" " class="img-responsive" />
+						<a href="images/a3.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a3.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Mantenimiento y Mecánica Industrial</h4>
@@ -169,8 +169,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 				<div class="col-md-4 product-grid">
-						<a href="images/a4.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a4.jpg" alt=" " class="img-responsive" />
+						<a href="images/a4.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a4.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Automatización y Sistemas Eléctricos</h4>
@@ -178,8 +178,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 				</div>
 				<div class="col-md-4 product-grid">	
-						<a href="images/a5.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a5.jpg" alt=" " class="img-responsive" />
+						<a href="images/a5.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a5.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Venta de Suministros y Repuestos</h4>
@@ -187,8 +187,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 				<div class="col-md-4 product-grid">
-						<a href="images/a6.jpg" class="b-link-stripe b-animate-go1   swipebox"  title="">
-							<img src="images/a6.jpg" alt=" " class="img-responsive" />
+						<a href="images/a6.webp" class="b-link-stripe b-animate-go1   swipebox"  title="">
+							<img src="images/a6.webp" alt=" " class="img-responsive" />
 						</a>
 						<div class="project-grid-text1">
 							<h4> Logística y Transporte (Acarreo)</h4>
@@ -212,8 +212,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h5>Todo lo que tu industria necesita, en un solo lugar.</h5>
 		<div class="features-info">
 			<div class="col-md-6 features-left">
-				<a href="single.html"class="mask">
-				     <img src="images/feature-img.jpg" class="img-responsive zoom-img" alt=""/>
+				<a href="about.html"class="mask">
+				     <img src="images/feature-img.webp" class="img-responsive zoom-img" alt=""/>
 				</a>
 			</div>
 			<div class="col-md-6 features-right">
@@ -228,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="features1">
 	<div class="container">
 		<h3>Calidad Certificada: Los Equipos Más Robustos y Confiables del Mercado.</h3>
-		<h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</h5>
+		<h5>El Momento de Optimizar su Operación es Ahora</h5>
 		<div class="features-info1">
 			<div class="col-md-6 features-right1">
 				<h4>Potencie su Rentabilidad y Asegure su Operación</h4>
@@ -236,8 +236,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="contact.html" class="hvr-bounce-to-bottom">SOLICITAR COTIZACION</a>
 			</div>
 						<div class="col-md-6 features-left1">
-							<a href="single.html"class="mask">
-				              <img src="images/feature-img2.jpg" class="img-responsive zoom-img" alt=""/>
+							<a href="gallery.html"class="mask">
+				              <img src="images/feature-img2.webp" class="img-responsive zoom-img" alt=""/>
 				           </a>
 			</div>
 			<div class="clearfix"> </div>
