--- a/contact.html
+++ b/contact.html
@@ -111,12 +111,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-6 contact-top-right">
 						<div class="contact-textarea">
-							<form>
-								<input type="text" value="Primer nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'First Name';}"/>
-								<input type="text" value="Segundo nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Second Name';}"/>
-								<input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email Id';}"/>
-								<textarea value="Mensaje:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mensaje:';}">Mensaje..</textarea>
+							<form name="submit-to-google-sheet">
+								<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}"/>
+								<input type="text" name="Apellido" value="Apellido" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Apellido';}"/>
+								<input type="text" name="Celular" value="Celular" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Celular';}"/>
+								<input type="text" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}"/>
+								<textarea name="Mensaje" value="Mensaje:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mensaje:';}">Mensaje..</textarea>
 								<input type="submit" value="ENVIAR" >
+								<span id="mensaje-exito" style="display: none; color: green;">¡Enviado!</span>
 								<input type="reset" value="BORRAR" >
 							</form>
 						</div>
@@ -173,6 +175,42 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---->
 <a href="https://wa.me/573146817275" target="_blank">
 	<svg fill="none" viewBox="0 0 360 362" width="10%" height="10%"><path fill="#25D366" fill-rule="evenodd" d="M307.546 52.566C273.709 18.684 228.706.017 180.756 0 81.951 0 1.538 80.404 1.504 179.235c-.017 31.594 8.242 62.432 23.928 89.609L0 361.736l95.024-24.925c26.179 14.285 55.659 21.805 85.655 21.814h.077c98.788 0 179.21-80.413 179.244-179.244.017-47.898-18.608-92.926-52.454-126.807v-.008Zm-126.79 275.788h-.06c-26.73-.008-52.952-7.194-75.831-20.765l-5.44-3.231-56.391 14.791 15.05-54.981-3.542-5.638c-14.912-23.721-22.793-51.139-22.776-79.286.035-82.14 66.867-148.973 149.051-148.973 39.793.017 77.198 15.53 105.328 43.695 28.131 28.157 43.61 65.596 43.593 105.398-.035 82.149-66.867 148.982-148.982 148.982v.008Zm81.719-111.577c-4.478-2.243-26.497-13.073-30.606-14.568-4.108-1.496-7.09-2.243-10.073 2.243-2.982 4.487-11.568 14.577-14.181 17.559-2.613 2.991-5.226 3.361-9.704 1.117-4.477-2.243-18.908-6.97-36.02-22.226-13.313-11.878-22.304-26.54-24.916-31.027-2.613-4.486-.275-6.91 1.959-9.136 2.011-2.011 4.478-5.234 6.721-7.847 2.244-2.613 2.983-4.486 4.478-7.469 1.496-2.991.748-5.603-.369-7.847-1.118-2.243-10.073-24.289-13.812-33.253-3.636-8.732-7.331-7.546-10.073-7.692-2.613-.13-5.595-.155-8.586-.155-2.991 0-7.839 1.118-11.947 5.604-4.108 4.486-15.677 15.324-15.677 37.361s16.047 43.344 18.29 46.335c2.243 2.991 31.585 48.225 76.51 67.632 10.684 4.615 19.029 7.374 25.535 9.437 10.727 3.412 20.49 2.931 28.208 1.779 8.604-1.289 26.498-10.838 30.228-21.298 3.73-10.46 3.73-19.433 2.613-21.298-1.117-1.865-4.108-2.991-8.586-5.234l.008-.017Z" clip-rule="evenodd"/></svg>
-</a> 
+</a>
+<script>
+  // 1. PEGA AQUÍ TU URL DE GOOGLE (dentro de las comillas)
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwbkNKT1Cgv34tUiehzTUuiwVDqoApKLUG7hUFE1wsqHzJIqUQR2sxCYTALaPT6Q0im/exec';
+  
+  const form = document.forms['submit-to-google-sheet'];
+  const successMessage = document.getElementById('mensaje-exito');
+
+  form.addEventListener('submit', e => {
+    e.preventDefault(); // Evita que la página se recargue sola
+    
+    // Muestra un texto de "Cargando..." en el botón si quieres (opcional)
+    // Código nuevo (ajustado para tu input)
+    const btn = form.querySelector('input[type="submit"]'); // Busca específicamente el input de envío
+    const originalText = btn.value; // Guarda el texto original (ej: "Enviar")
+    btn.value = "Enviando..."; // Cambia el value mientras carga
+    btn.disabled = true;
+
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => {
+          // Si todo sale bien:
+          successMessage.style.display = 'block'; // Muestra el mensaje de éxito
+          form.reset(); // Limpia los campos
+          btn.value = originalText; // Restaura el botón
+          btn.disabled = false;
+          
+          // Oculta el mensaje de éxito a los 5 segundos
+          setTimeout(() => { successMessage.style.display = 'none'; }, 5000);
+      })
+      .catch(error => {
+          console.error('Error!', error.message);
+          btn.value = originalText;;
+          btn.disabled = false;
+          alert('Hubo un error al enviar. Por favor intenta de nuevo.');
+      });
+  });
+</script> 
 </body>
 </html>
